fix: bullet list class edits footer spacing in about page

--- a/css/about.scss
+++ b/css/about.scss
@@ -3,14 +3,6 @@
 
 @import "variables";
 
-h3 {
-    color: $gray;
-}
-
-li {
-    padding-top: 1em;
-}
-
 .aboutImage {
     margin-bottom: 2em;
 
@@ -26,12 +18,17 @@ li {
     }
 }
 
-/*
-.projects {
+.aboutText {
+    h3 {
+        color: $gray;
+    }
     h4 {
         line-height: 1;
         margin: 0px;
         padding: 0px;
     }
+    li {
+        padding-top: 1em;
+    }
 }
-*/
+
